[project]
name = "memo-md"
version = "0.1.0"
description = "markdown flashcards parser and viewer"
authors = [
    {name = "George Ibrahim Aziz",email = "103423847+georgeibrahim1@users.noreply.github.com"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "textual (>=7.4.0,<8.0.0)",
    "zandev-textual-widgets (>=1.0.0,<2.0.0)",
    "rich-pixels (>=3.0.1,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pyinstaller (>=6.18.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
